# git-fleet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/git_fleet/: __init__.py  __main__.py  _version.py  core.py  formatters.py  schema.py
