[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-fleet"
dynamic = ["version"]
description = "Command multiple Git repositories like a fleet admiral"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]
keywords = ["git", "repository", "fleet", "cli", "parallel", "multi-repo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

[project.scripts]
git-fleet = "git_fleet:app"

[project.urls]
Repository = "https://github.com/asatamax/git-fleet"
Issues = "https://github.com/asatamax/git-fleet/issues"

[tool.hatch.version]
path = "src/git_fleet/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/git_fleet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/git_fleet/schema.py" = ["E501"]  # Schema contains long description strings

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
